# skit

./: .gitignore  README.md  howtoship.md  pyproject.toml  readme.md
.github/workflows/: docs.yaml
examples/: 00hello.py  01simple_game.py  02tcg.py
examples/assets/: 01layout.json  01pieces.csv  02data.toml
skit/: __init__.py  _types.py  card.py  deck.py  render.py
tools/: make-docs.py
