[project]
name = "skit-game"
version = "0.1.7"
description = "A tool for prototyping card games"
authors = [
    { name = "Matt Cooper", email = "vtbassmatt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.1.0",
]
classifiers = [
  "Topic :: Artistic Software",
  "Topic :: Games/Entertainment",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Multimedia :: Graphics",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/vtbassmatt/skit"
Repository = "https://github.com/vtbassmatt/skit.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skit"]

[dependency-groups]
dev = [
    "pdoc>=15.0.1",
]
